--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,5 +23,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
